1998-05-06  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* telnetd.c (main): 
	* telnetd-ktd.c (main): POSIX states that getopt returns -1 when it
		is done parsing options, not EOF.

Tue Mar  3 14:26:04 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* configure.in: Rename HAS_* to HAVE_* for the following tests:
 		sac.h, sys/ptyvar.h, sys/filio.h, sys/stream.h,
 		gettosbyname(), and make appropriate adjustments in the
 		rest of the .c files.  Remove tests which aren't being
 		used anymore: vhangup, utmpx.h, utmp.h, etc.

	* defs.h: Use HAVE_SYS_FILIO_H instead of FILIO_H

	* sys_term.c: Use HAVE_SAC_H and HAVE_SYS_STREAM_H instead of
		HAS_SAC and STREAMS.

	* telnetd.c, telnetd-ktd.c: Use HAVE_GETTOSBYNAME instead of
		HAS_GETTOS

	* telnetd.c: Use HAVE_SYS_PTYVAR_H instead of HAS_PTYVAR.

Mon Feb 23 22:58:22 1998  Tom Yu  <tlyu@mit.edu>

	* utility.c (ptyflush, netflush): Explicitly reset SIGCHLD handler
 	before calling cleanup(). [telnet/546]

	* telnetd.c (telnet):  Explicitly reset SIGCHLD handler before
	calling cleanup(). [telnet/546]

	* state.c (dooption): Explicitly reset SIGCHLD handler before
	calling cleanup(). [telnet/546]

Wed Feb 18 15:38:31 1998  Tom Yu  <tlyu@mit.edu>

	* Makefile.in: Remove trailing slash from thisconfigdir.  Fix up
	BUILDTOP for new conventions.

Sat Feb 14 10:35:36 1998  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* configure.in: Remove USE_ANAME.

Mon Feb  2 17:02:29 1998  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* Makefile.in: Define BUILDTOP and thisconfigdir in the Makefile

Wed Jan 28 17:21:08 1998  Dan Winship  <danw@mit.edu>

	* telnetd.c (doit): additional fix for previous terminaltype change

Tue Jan 27 18:27:16 1998  Dan Winship  <danw@mit.edu>

	* telnetd.c (getterminaltype): Null-terminate strings and avoid a
	buffer overrun.

	* ext.h: make terminaltype a char[] instead of a char * for
	telnetd.c change

	* state.c (suboption): redo handling of terminaltype
