@@ -1,3 +1,11 @@
+1998-05-26  Theodore Ts'o  <tytso@rsts-11.mit.edu>
+
+	* sys_term.c: #include utmp.h if present, and use _PATH_WTMP and
+		_PATH_UTMP if defined to determine location of the wtmp
+		and utmp files.
+
+	* configure.in: Add check for utmp.h
+
 1998-05-06  Theodore Ts'o  <tytso@rsts-11.mit.edu>
 
 	* telnetd.c (main): 
